# RICA

./: README.md  env.example  main.py  pyproject.toml  run_rica.ps1
app/: main.py
app/crews/: helpers.py  qna.py
app/routes/manager/: helpers.py  models.py  route.py
app/routes/telegram/: route.py
scripts/: run_rica.bat
src/rica/: __init__.py  cli.py
src/rica/agents/: __init__.py
src/rica/api/: __init__.py
src/rica/audio/: __init__.py  audio_manager.py  speech_to_text.py  text_to_speech.py
src/rica/core/: __init__.py  config.py
tests/: __init__.py  test_config.py
